--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "advent-of-code"
+authors = ["Robin Toncourt<robin.toncourt@gmail.com>"]
+description = "Solution des défis d'Advent of Code."
 version = "0.1.0"
 edition = "2021"
 
